correction on mobile view|js not done|

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@
     justify-content: center;
 }
 
+/* Expence & income input field resize */
+.resizeinput{
+    width: 200px; ;
+}
+
 /* saving input field resize */
 
 .resize{
